--- a/src/app/pages/payment/payment-proof/payment-proof.component.html
+++ b/src/app/pages/payment/payment-proof/payment-proof.component.html
@@ -40,8 +40,14 @@
 <ion-footer class="ion-no-border">
   <ion-row class="ion-padding">
     <ion-col>
-      <ion-button color="success" expand="block" shape="round" (click)="paymentForm.ngSubmit.emit()">
-        {{ 'NEXT' | translate }}
+      <ion-button
+        color="success"
+        expand="block"
+        shape="round"
+        (click)="paymentForm.ngSubmit.emit()"
+        [disabled]="isOnFetch"
+      >
+        {{ 'NEXT' | translate }} <ion-spinner *ngIf="isOnFetch" name="dots" color="dark"></ion-spinner>
       </ion-button>
     </ion-col>
   </ion-row>
