--- a/src/app/pages/login/login-form/login-form.component.html
+++ b/src/app/pages/login/login-form/login-form.component.html
@@ -28,8 +28,14 @@
               class="default-theme"
               formControlName="password"
               placeholder="{{ 'YOUR_PASSWORD' | translate }}"
-              type="password"
+              [type]="showPass ? 'text' : 'password'"
             ></ion-input>
+            <ion-icon
+              (click)="showPass = !showPass"
+              [name]="showPass ? 'eye-off-outline' : 'eye-outline'"
+              size="small"
+              slot="end"
+            ></ion-icon>
             <small *ngIf="fg.controls.password.dirty">{{ fg.controls.password.errors?.required?.message }}</small>
           </ion-item>
         </form>
@@ -54,9 +60,15 @@
 <ion-footer class="ion-no-border">
   <ion-row class="ion-padding-bottom">
     <ion-col class="ion-padding">
-      <ion-button class="login-button" expand="block" color="limegreen" (click)="loginForm.ngSubmit.emit()">
-        {{ 'LOGIN' | translate }}</ion-button
+      <ion-button
+        class="login-button"
+        expand="block"
+        color="limegreen"
+        (click)="loginForm.ngSubmit.emit()"
+        [disabled]="isOnFetch"
       >
+        {{ 'LOGIN' | translate }} <ion-spinner *ngIf="isOnFetch" name="dots" color="dark"></ion-spinner
+      ></ion-button>
     </ion-col>
   </ion-row>
 </ion-footer>
