--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -156,8 +156,8 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button expand="block" shape="round" color="success" (click)="next()" [disabled]="fg.invalid">
-          {{'NEXT' | translate}}
+        <ion-button expand="block" shape="round" color="success" (click)="next()" [disabled]="fg.invalid || isOnFetch">
+          {{'NEXT' | translate}} <ion-spinner *ngIf="isOnFetch" name="dots" color="dark"></ion-spinner>
         </ion-button>
       </ion-col>
     </ion-row>
