--- a/src/global.scss
+++ b/src/global.scss
@@ -75,6 +75,7 @@ ion-header {
   ion-icon {
     position: absolute;
     // background: var(--ion-color-light);
+    top: 1.7em;
     right: 1.3em;
     bottom: 0.2em;
     z-index: 1000;
@@ -198,7 +199,7 @@ ion-item {
   border-radius: 0.5em;
 }
 
-.my-custom-class .modal-wrapper{
+.my-custom-class .modal-wrapper {
   height: 20%;
   width: 100%;
   bottom: 0;
