--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -33,7 +33,7 @@
     <ion-row class="ion-align-items-center ion-padding-horizontal">
       <ion-col size="6"><span class="text-address-info">{{'DELIVERY_LOCATION' | translate}}</span></ion-col>
       <ion-col size="6" class="ion-text-right">
-        <small [routerLink]="['/address']" [queryParams]="{mode: 'select'}"
+        <small class="link" [routerLink]="['/address']" [queryParams]="{mode: 'select'}"
           >{{"CHANGE_DELIVERY_LOCATION" | translate}}</small
         >
       </ion-col>
