--- a/src/app/pages/product/product-detail/product-detail.component.html
+++ b/src/app/pages/product/product-detail/product-detail.component.html
@@ -18,7 +18,7 @@
           class="ion-no-padding ion-align-self-center ion-text-center scan-icon-container"
           (click)="scanQR(); $event.stopPropagation()"
         >
-          <ion-icon name="qr-code-outline" color="primary" class="scan-icon"></ion-icon>
+          <img src="assets/images/barcode.svg" class="scan-icon" />
         </div>
       </ion-col>
     </ion-row>
