--- a/src/app/pages/payment/payment-instruction/payment-instruction.component.html
+++ b/src/app/pages/payment/payment-instruction/payment-instruction.component.html
@@ -18,7 +18,7 @@
     </ion-col>
   </ion-row>
   <div class="divider"></div>
-  <ion-row class="ion-padding-horizontal">
+  <ion-row class="ion-padding-horizontal ion-padding-top">
     <ion-col size="12">
       <ion-text class="text-title">
         {{ 'HOW_TO_PAY' | translate }}
