--- a/src/app/pages/payment/payment-proof/payment-proof.component.html
+++ b/src/app/pages/payment/payment-proof/payment-proof.component.html
@@ -28,7 +28,7 @@
           <ion-icon name="image-outline" class="img-upload"></ion-icon>
           <br />
           <ion-text class="text-upload">
-            {{ 'ADD_IMAGE' }}
+            {{ 'ADD_IMAGE' | translate }}
           </ion-text>
         </div>
         <img width="80%" class="img-proof" [src]="selectedImage" *ngIf="selectedImage" />
