--- a/src/app/pages/product/product-detail/product-detail.component.scss
+++ b/src/app/pages/product/product-detail/product-detail.component.scss
@@ -69,6 +69,12 @@ ion-header {
     vertical-align: super;
     color: #f8a345;
   }
+  &-out-of-stock {
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 1.25;
+    color: #d61414;
+  }
 }
 
 .price-linethrough {
