--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,12 +1,12 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar mode="ios">
-    <ion-row>
-      <ion-col size="4" size-md="3" class="ion-no-padding-bottom ion-padding-horizontal ion-padding-top">
-        <img src="assets/images/app-logo.svg" />
+    <ion-row class="ion-align-items-center ion-padding-top">
+      <ion-col size="4" size-md="3" class="ion-padding-horizontal">
+        <img style="height:25px" src="assets/images/app-logo.svg" />
       </ion-col>
-      <ion-col size="8" size-md="9" class="ion-text-right ion-no-padding-bottom">
+      <ion-col size="8" size-md="9" class="ion-text-right">
         <ion-row>
-          <ion-col size="12" class="ion-no-padding location-title ion-padding-top ion-padding-end"
+          <ion-col size="12" class="ion-no-padding location-title ion-padding-end"
             >{{'STORE_LOCATION' | translate}}</ion-col
           >
           <ion-col size="12" class="ion-padding-end" (click)="changeLocation()">
