--- a/src/app/pages/product/product-detail/product-detail.component.html
+++ b/src/app/pages/product/product-detail/product-detail.component.html
@@ -50,6 +50,10 @@
               <br />
             </ion-text>
             <span class="product-size">Size: {{ productData?.weight }} {{ productData?.unit?.name }}</span>
+            <br />
+            <ion-text class="product-out-of-stock" *ngIf="productData?.stock < 5">
+              {{ 'STOCK' | translate }} < 5
+            </ion-text>
           </ion-col>
           <!-- <ion-col size="6" class="ion-no-padding ion-text-right">
             <ion-button color="primary" size="small" shape="round" (click)="addItemToCart()">
@@ -149,7 +153,6 @@
         expand="full"
         (click)="addItemToCart()"
         [ngClass]="{ disabled: qty < 1 || productData?.stock == 0 }"
-        [disabled]="isOnFetch"
       >
         {{ 'ADD_TO_CART' | translate }}
         <ion-spinner *ngIf="isOnFetch" name="dots" color="dark"></ion-spinner>
