--- a/src/app/shared/common/modals/modal-info/modal-info.component.html
+++ b/src/app/shared/common/modals/modal-info/modal-info.component.html
@@ -16,7 +16,7 @@
 <ion-footer>
   <ion-row>
     <ion-col class="ion-padding-horizontal ion-padding-bottom">
-      <ion-button expand="full" (click)="dismiss()">
+      <ion-button expand="full" color="success" shape="round" (click)="dismiss()">
         {{ btnText }}
       </ion-button>
     </ion-col>
