implement login & register fb (#90)
* implement login & register fb

--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -50,7 +50,7 @@
                 type="email"
                 formControlName="email"
                 style="--placeholder-color: blue !important"
-                [disabled]="userInfo"
+                [disabled]="googleInfo"
               ></ion-input>
             </ion-item>
             <small *ngIf="fg.controls.email.dirty">
