uncomment button login fb

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -13,12 +13,12 @@
       <ion-col size="12">
         <ion-button expand="block" color="limegreen" [routerLink]="[ 'form' ]"><b>Login</b></ion-button>
       </ion-col>
-      <!-- <ion-col size="12">
+      <ion-col size="12">
         <ion-button expand="block" fill="solid" class="social-media-login" (click)="loginFb()">
           <fa-icon [icon]="faFb"></fa-icon>
           <span class="ion-padding-start"> Login With Facebook </span>
         </ion-button>
-      </ion-col> -->
+      </ion-col>
       <ion-col size="12">
         <ion-button expand="block" fill="solid" class="social-media-login" (click)="loginGoogle()">
           <fa-icon [icon]="faGoogle"></fa-icon>
