implement update modal

--- a/src/app/shared/common/modals/modal-confirmation/modal-confirmation.component.html
+++ b/src/app/shared/common/modals/modal-confirmation/modal-confirmation.component.html
@@ -26,12 +26,12 @@
   <ion-row>
     <ion-col class="ion-padding-horizontal ion-padding-bottom">
       <ion-button expand="full" shape="round" color="success" fill="outline" (click)="dismiss()">
-        {{ 'NO' | translate }}
+        {{ cancelText | translate }}
       </ion-button>
     </ion-col>
     <ion-col class="ion-padding-horizontal ion-padding-bottom">
       <ion-button expand="full" shape="round" color="success" (click)="submit()">
-        {{ 'YES' | translate }}
+        {{ submitText | translate }}
       </ion-button>
     </ion-col>
   </ion-row>
