Adjust notification page, adjust out of stock styling

--- a/src/app/pages/notification/notification-list/notification-list.component.html
+++ b/src/app/pages/notification/notification-list/notification-list.component.html
@@ -65,7 +65,7 @@
                 <ion-col size="12" class="ion-no-padding">
                   <ion-text class="notif-title">{{notif?.subject}}</ion-text>
                 </ion-col>
-                <ion-col size="12" class="ion-no-padding truncate">
+                <ion-col size="12" class="ion-no-padding">
                   <ion-text class="notif-desc">{{notif?.message}}</ion-text>
                 </ion-col>
                 <ion-col size="12" class="ion-no-padding">
