--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -34,6 +34,7 @@
       </ion-col>
       <ion-col size="1.5" class="ion-no-padding ion-align-self-center ion-text-center">
         <ion-icon name="notifications" color="primary" class="notif-icon link" (click)="openNotification()"></ion-icon>
+        <!-- <ion-icon name="alert-circle-outline" color="primary" class="notif-icon link" (click)="presentToast()"></ion-icon> -->
       </ion-col>
     </ion-row>
   </ion-toolbar>
