--- a/src/app/shared/common/cards/card-product/card-product.component.scss
+++ b/src/app/shared/common/cards/card-product/card-product.component.scss
@@ -58,8 +58,7 @@
 }
 
 .disabled {
-  filter: grayscale(0.3);
-  opacity: 0.8;
+  opacity: 0.6;
 
   &>.out-of-stock {
     position: absolute;
@@ -67,13 +66,16 @@
     font-weight: 600;
     top: 0;
     border-radius: 15px;
-    border: 1px solid black;
-    background-color: rgba(255,255,255,0.9);
-    padding: 2px 1px;
+    background-color: rgba(38,38,38,0.7);
+    padding: 4px 1px;
     color: black;
     left: 0;
     right: 0;
     top: 30px;
+    width: 85%;
+    margin: auto;
+    color: white;
     text-align: center;
+    text-transform: uppercase;
   }
 }
