add saved price to checkout

--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -33,8 +33,9 @@
     <ion-row class="ion-align-items-center ion-padding-horizontal">
       <ion-col size="6"><span class="text-address-info">{{'DELIVERY_LOCATION' | translate}}</span></ion-col>
       <ion-col size="6" class="ion-text-right">
-        <small class="link" [routerLink]="['/address']" [queryParams]="{mode: 'select'}">{{"CHANGE_DELIVERY_LOCATION" |
-          translate}}</small>
+        <small class="link" [routerLink]="['/address']" [queryParams]="{mode: 'select'}"
+          >{{"CHANGE_DELIVERY_LOCATION" | translate}}</small
+        >
       </ion-col>
       <ion-col size="12">
         <ion-text color="medium">
@@ -48,7 +49,7 @@
         <span><b>{{'DELIVERY_NOTES' | translate}}</b></span>
       </ion-col>
       <ion-col size="12" class="ion-no-padding">
-        <ion-item lines="none" class="form-group" style="margin:5px;--padding-start: 0;">
+        <ion-item lines="none" class="form-group" style="margin: 5px; --padding-start: 0">
           <ion-textarea rows="3" placeholder="{{'LOCATION_DETAIL_PLACEHOLDER' | translate}}" [(ngModel)]="notes">
           </ion-textarea>
         </ion-item>
@@ -56,37 +57,63 @@
     </ion-row>
 
     <ion-row class="ion-padding-horizontal">
-      <ion-col size="12"><span><b>{{'DELIVERY_TIME' | translate}}</b></span></ion-col>
+      <ion-col size="12"
+        ><span><b>{{'DELIVERY_TIME' | translate}}</b></span></ion-col
+      >
       <ion-col size="12">
         <fieldset class="radio-wrapper">
           <div>
-            <input class="radio-input" type="radio" name="delivery_time" [value]="false" [disabled]="!canDeliverNow"
-              (change)="radioChanged('deliver_now')" [checked]="canDeliverNow" />
-            <label class="radio-label" [ngClass]="{ 'text-muted' : !canDeliverNow }">{{'DELIVER_NOW' |
-              translate}}</label><br />
-            <div style="font-size: 11px;padding-left: 24px;">
-              <span style="color:#F64740;">Now closed</span>
+            <input
+              class="radio-input"
+              type="radio"
+              name="delivery_time"
+              [value]="false"
+              [disabled]="!canDeliverNow"
+              (change)="radioChanged('deliver_now')"
+              [checked]="canDeliverNow"
+            />
+            <label class="radio-label" [ngClass]="{ 'text-muted' : !canDeliverNow }"
+              >{{'DELIVER_NOW' | translate}}</label
+            ><br />
+            <div style="font-size: 11px; padding-left: 24px" *ngIf="!canDeliverNow">
+              <span style="color: #f64740">{{'NOW_CLOSED' | translate}}</span>
               <span class="text-muted">
-                  <b> - Open on {{operationalTime?.open}}</b>
+                <b> - {{'OPEN_ON' | translate}} {{operationalTime?.open}}</b>
               </span>
             </div>
-
           </div>
           <div>
             <ion-row class="ion-align-items-center">
               <ion-col size="6" class="ion-no-padding">
-                <input class="radio-input" type="radio" name="delivery_time" [value]="true"
-                  (change)="radioChanged('deliver_later')" [checked]="!canDeliverNow" />
+                <input
+                  class="radio-input"
+                  type="radio"
+                  name="delivery_time"
+                  [value]="true"
+                  (change)="radioChanged('deliver_later')"
+                  [checked]="!canDeliverNow"
+                />
                 <label class="radio-label">{{'SCHEDULE_FOR_LATER' | translate}}</label>
               </ion-col>
               <ion-col size="6" class="ion-text-right">
-                <ion-button expand="block" fill="outline" size="small" color="medium"
-                  (click)="scheduleDatepicker.open()">
+                <ion-button
+                  expand="block"
+                  fill="outline"
+                  size="small"
+                  color="medium"
+                  (click)="scheduleDatepicker.open()"
+                >
                   {{selectedDate ? (selectedDate | date:'longDate') : ('SELECT_DATE' | translate)}}
                 </ion-button>
-                <ion-datetime #scheduleDatepicker class="ion-hide" displayFormat="D MMMM YYYY"
-                  pickerFormat="D MMMM YYYY" [min]="currDate" [ngModel]="selectedDate"
-                  (ionChange)="onDateSelect($event.detail.value)"></ion-datetime>
+                <ion-datetime
+                  #scheduleDatepicker
+                  class="ion-hide"
+                  displayFormat="D MMMM YYYY"
+                  pickerFormat="D MMMM YYYY"
+                  [min]="currDate"
+                  [ngModel]="selectedDate"
+                  (ionChange)="onDateSelect($event.detail.value)"
+                ></ion-datetime>
               </ion-col>
             </ion-row>
           </div>
@@ -94,8 +121,13 @@
       </ion-col>
 
       <ion-col size="3" class="ion-no-padding ion-text-center" *ngFor="let time of timeList;let i = index">
-        <ion-chip class="delivery-chip" [color]="time.selected ? 'success': 'light'" [outline]="!time?.selected"
-          [disabled]="(!selectedDate || !time?.active) || deliveryNow" (click)="onTimeSelect(i)">
+        <ion-chip
+          class="delivery-chip"
+          [color]="time.selected ? 'success': 'light'"
+          [outline]="!time?.selected"
+          [disabled]="(!selectedDate || !time?.active) || deliveryNow"
+          (click)="onTimeSelect(i)"
+        >
           <span>{{time?.text}}</span>
         </ion-chip>
       </ion-col>
@@ -125,7 +157,7 @@
         <span class="text-payment-info">{{'SUBTOTAL' | translate}}</span>
       </ion-col>
       <ion-col size="6" class="ion-text-right text-payment-price">
-        Rp. {{ paymentSummary?.raw_price | number: '1.0-0':'id' }}
+        Rp. {{ paymentSummary?.original_price | number: '1.0-0':'id' }}
       </ion-col>
       <!-- <ion-col size="6">
         <span class="text-payment-info">{{'SERVICE_FEE' |translate}}</span>
@@ -139,11 +171,11 @@
       <ion-col size="6" class="ion-text-right text-payment-price">
         Rp. {{ paymentSummary?.delivery_fee | number: '1.0-0':'id' }}
       </ion-col>
-      <ion-col size="6" *ngIf="paymentSummary?.discount > 0">
+      <ion-col size="6" *ngIf="paymentSummary?.saved_price > 0">
         <span class="text-payment-info">{{'DISCOUNT' |translate}}</span>
       </ion-col>
-      <ion-col size="6" class="ion-text-right text-payment-price" *ngIf="paymentSummary?.discount > 0">
-        Rp. {{ paymentSummary?.discount | number: '1.0-0':'id' }}
+      <ion-col size="6" class="ion-text-right text-payment-price text-discount" *ngIf="paymentSummary?.saved_price > 0">
+        Rp. {{ paymentSummary?.saved_price | number: '1.0-0':'id' }}
       </ion-col>
     </ion-row>
 
@@ -159,18 +191,30 @@
         <span class="text-payment-info">{{'SELECT_VOUCHER' |translate}}</span>
       </ion-col>
       <ion-col size="6" class="ion-text-right">
-        <ion-icon name="checkmark-outline" style="vertical-align: middle;" color="success"
-          *ngIf="(voucher && voucher?.quota > 0) || voucherError"></ion-icon>
-        <ion-icon name="alert-outline" style="vertical-align: middle;" color="warning"
-          *ngIf="(voucher && voucher?.quota <= 0) || voucherError"></ion-icon>
+        <ion-icon
+          name="checkmark-outline"
+          style="vertical-align: middle"
+          color="success"
+          *ngIf="(voucher && voucher?.quota > 0) || voucherError"
+        ></ion-icon>
+        <ion-icon
+          name="alert-outline"
+          style="vertical-align: middle"
+          color="warning"
+          *ngIf="(voucher && voucher?.quota <= 0) || voucherError"
+        ></ion-icon>
 
         <span [routerLink]="['/voucher']" class="link">
           <small *ngIf="!voucher || !voucher?.voucher_code"> {{'USE_VOUCHER' | translate}} </small>
           <span class="used-voucher" *ngIf="voucher?.voucher_code"> {{ voucher?.voucher_code | uppercase }} </span>
         </span>
 
-        <ion-icon name="close-outline" style="vertical-align: middle;" *ngIf="voucher && voucher?.voucher_code"
-          (click)="removeVoucher()"></ion-icon>
+        <ion-icon
+          name="close-outline"
+          style="vertical-align: middle"
+          *ngIf="voucher && voucher?.voucher_code"
+          (click)="removeVoucher()"
+        ></ion-icon>
       </ion-col>
     </ion-row>
 
